@@ -201,6 +201,8 @@ extern void mid_flush_file(void);
 extern void mid_initialize_export(void);
 extern void mid_reset_export_buffers(void);
 extern int mid_max_buffer(void);
+extern void mid_set_cambio_instrumento(void);
+extern z80_byte mid_instrument;
 
 extern char audio_valor_enviar_sonido;
 
