@@ -19,6 +19,7 @@ Improved ZX Vision menu interface:
 -Colour palette window now shows all colours that fit in the window
 -View sprite legend now adapts to size
 
+Improved Audio to .mid exporter: allow changing instrument
 
 Fixed file previews on corrupted files: pzx, tap
 Fixed rearranging windows and using total window height
